-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0
-
OS X 10.11
QDeclarativeGeoMapItemView::itemModelDataChanged crashes if it's called before there's items available in m_itemData.
Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000010 Exception Note: EXC_CORPSE_NOTIFY VM Regions Near 0x10: --> __TEXT 000000010b8fb000-000000010b90f000 [ 80K] r-x/rwx SM=COW /work/*/mapItemTest.app/Contents/MacOS/mapItemTest Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libdeclarative_location.dylib 0x0000000112c082ab QDeclarativeGeoMapItemView::itemModelDataChanged(QModelIndex const&, QModelIndex const&, QVector<int> const&) + 459 1 org.qt-project.QtCore 0x000000010bc2ee30 QMetaObject::activate(QObject*, int, int, void**) + 880 2 org.qt-project.QtCore 0x000000010bcc69ad QAbstractItemModel::dataChanged(QModelIndex const&, QModelIndex const&, QVector<int> const&) + 61 3 com.yourcompany.mapItemTest 0x000000010b9022ba ClusterableModel::doRecalculation() + 1034 (clusterablemodel.cpp:125) 4 com.yourcompany.mapItemTest 0x000000010b901865 ClusterableModel::recalculateClusters() + 69 (clusterablemodel.cpp:140) 5 com.yourcompany.mapItemTest 0x000000010b903633 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ClusterableModel::*)()>::call(void (ClusterableModel::*)(), ClusterableModel*, void**) + 131 (qobjectdefs_impl.h:501)
For Gerrit Dashboard: QTBUG-52174 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
154036,2 | Fix crash when no items available and DataChanged is called. | 5.6 | qt/qtlocation | Status: MERGED | +2 | 0 |