Fix crash when no items available and DataChanged is called.

Added check to do nothing if no items available to avoid crash.

Task-number: QTBUG-52174
Change-Id: Ibe870480b24129733b051c4b2b172b554a3c9602
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>